# 12_bloom

./: .clever.json  .dockerignore  .env.dev  .env.prod  .env.template  .env.test  .envlocal  .gitattributes  .gitignore  .pre-commit-config.yaml  BLOOM_CONFIG.txt  Bloom scrap EDA 1.ipynb  Dockerfile  Makefile  README.md  README.txt  Trawlwatcher.py  alembic.ini  alert.py  app.py  bloom_scrap.csv  bloom_scraper.py  bloom_scraper.sh  bloom_scraper_crontab.py  chalutiers pélagiques.xlsx  container.py  cron.sh  cron_kpler_endpoint.sh  cron_spire_endpoint.sh  docker-compose-downgrade.yaml  docker-compose-load-data.yaml  docker-compose-upgrade.yaml  docker-compose.override.dev.yaml  docker-compose.yaml  etl-dummy.sh  etl.sh  etl_demo.sh  mkdocs.yaml  pyproject.toml  requirements.txt  (+1 more)
backend/: alembic.ini  load_spire_data_from_api.py  main.py  pyproject.toml  requirements.txt  tasks.py  vessel_width.xlsx
backend/alembic/: env.py
backend/alembic/init_script/: load_positions_data.py  load_vessels_data.py
backend/alembic/versions/: 06bb3c26076f_rename_fct_segment_head.py  28d732b6f8d2_db_logging_table.py  2b9d9e61be30_metrics_add_category.py  2e4561a69da9_task_execution_add_duration_position.py  31227ff28c79_add_dim_vessel_details.py  384baeb90009_alter_cascade_constraints.py  4d475167ca65_create_dim_white_zone.py  5801cb8f1af5_add_enable_field_to_dim_zone.py  5bfe00a08853_modification_cle_primaire_sur_fct_.py  7571bc149f41_add_bridge_vessel_mapping.py  7921b2e3a780_rename_total_time_extincting_amp.py  7962eee40abe_create_port_table.py  7ba4634af5ad_rename_fct_columns.py  7d3bd6bf5482_create_dim_zone.py  b0b4ce13066d_create_spire_ais_data.py  c02d2b79eab2_scd_implementation_for_dim_vessel_dim_.py  c16b5dd42d2c_create_kpler_ais_data.py  c32d65d6e6fd_create_fct_metrics.py  ca6054b36c21_create_facts.py  d37e3c089e59_fix_facts.py  d9d279892b5c_add_task_execution.py  dbe1b900df12_clean_position_on_updated_vessels_only.py  dcf999bd43af_create_position_updates.py  e52b9542531c_create_marine_traffic_positions_and_.py
backend/bloom/: app.py  config.py  container.py  dependencies.py  logger.py  main.py
backend/bloom/domain/: api.py  excursion.py  kpler_ais_data.py  metrics.py  metrics_new.py  port.py  position_update.py  segment.py  spire_ais_data.py  task_execution.py  vessel.py  vessel_last_position.py  vessel_mapping.py  vessel_position.py  white_zone.py  zone.py  zone_category.py
backend/bloom/etl/: __init__.py  create_update_excursions_segments_pipeline.py
backend/bloom/infra/: __init__.py  kpler_api_client.py  repository.py  unit_of_work.py
backend/bloom/infra/database/: database_manager.py  errors.py  sql_model.py
backend/bloom/infra/http/: kpler_api_utils.py
backend/bloom/infra/interfaces/: __init__.py  repository.py  vessel.py
backend/bloom/infra/ports/: repository.py
backend/bloom/infra/repositories/: __init__.py  repository_alert.py  repository_excursion.py  repository_kpler_ais_data.py  repository_metrics.py  repository_port.py  repository_position_updates.py  repository_raster.py  repository_rel_segment_zone.py  repository_segment.py  repository_spire_ais_data.py  repository_task_execution.py  repository_vessel.py  repository_vessel_data.py  repository_vessel_mapping.py  repository_vessel_position.py  repository_vessel_voyage.py  repository_zone.py  test_vessel.py
backend/bloom/routers/: excursions.py  metrics.py  ports.py  requests.py  vessels.py  zones.py
backend/bloom/routers/v1/: cache.py  ports.py  (+3 more)
backend/bloom/services/: GetVesselsFromSpire.py  __init__.py  api.py  geo.py  metrics.py
backend/bloom/tasks/: archive_spire_ais_data.py  clean_positions.py  compute_port_geometry_buffer.py  convert_spire_vessels_to_spire_ais_data.py  create_new_excursion.py  create_update_excursions_segments.ipynb  create_update_excursions_segments.py  create_update_excursions_segments_test.py  create_update_rel_segments_zones.py  load_dim_port_from_csv.py  load_dim_vessel_from_csv.py  load_dim_zone_amp_from_csv.py  load_fct_excursions_from_csv.py  load_spire_data_from_api.py  load_spire_data_from_csv.py  load_spire_data_from_json.py  rel_segments_zones.py  retro_clcls.py  update_vessel_data_voyage.py
backend/bloom/usecase/: Excursions.py  Ports.py  create_kpler_ais_messages.py
backend/clevercloud/: clever.json  cron.json
backend/dbt_trawlwatch/: .gitignore  .user.yml  README.md  dbt_project.yml  package-lock.yml  profiles.yml
backend/dbt_trawlwatch/_initialize/: init__itm_vessel_first_and_last_positions.sql  init__itm_vessel_positions.sql  init__itm_vessel_segments.sql  init__stg_vessel_positions.sql
backend/dbt_trawlwatch/_misc/: compare_ais_and_vessels_join_methods.sql
backend/dbt_trawlwatch/analyses/: analyse_excursion__total_time.sql  analyse_excursion__zone_metrics.sql  analyse_vessel__departure_arrival_excursions.sql
backend/dbt_trawlwatch/macros/: evaluate_fishing_rights.sql  switch_date_formats.sql
backend/dbt_trawlwatch/orchestration/: run_workflow.ps1
backend/dbt_trawlwatch/seeds/: country_codes.csv  dim_mmsi.csv  historical_dim_mmsi.csv  historical_dim_vessels.csv  ports.csv  seeds.yml  static_vessels_table.csv  updated_vessels_table.csv
backend/dbt_trawlwatch/tests/: _tests_schema.yml  assert_excursion_duration_is_positive_if_not_ongoing.sql  assert_first_and_last_position_complete.sql  assert_last_raw_position_complete.sql  assert_no_more_than_1_open_ongoing_excursion_per_vessel.sql  assert_port_w_excursions_have_at_least_one_port_call.sql  assert_port_w_excursions_have_positive_time_total_port_call.sql
backend/tasks/: init.py  load_dimensions.py
backend/tasks/data/: load_amp_data.py  load_vessels_data.py
backend/tasks/dimensions/: compute_port_geometry_buffer.py  load_dim_port_from_csv.py
backend/tasks/facts/: extract_spire_data_from_json.py  extract_vessel_positions_data.py
backend/tasks/transformations/: update_vessel_data_voyage.py
backend/tests/: marthe-create-segments.ipynb  test_alert.py  test_vessel_is_in_port.py
backend/tests/etl/: create_update_excursions_segments_pipeline.py
backend/tests/infra/: test_unit_of_work.py
(+514 files in other folders)
