[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "bloom"
version = "0.1.0"
description = "Bloom scrapping application"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
alembic = "^1.10.2"
autopep8 = "1.5.4"
dependency-injector = "^4.41.0"
dependency_injection = "1.2.0"
folium = "^0.14.0"
geoalchemy2 = "^0.13.1"
geopandas = "0.14.3"
geopy = "^2.4.0"
gql = "^3.4.0"
matplotlib = "^3.8.0"
openpyxl = "^3.1.0"
pandas = "1.4.4"
poetry = "^1.8"
psycopg2-binary = "^2.9.6"
pydantic = "1.10.14"
python = ">=3.9,<3.9.7 || >3.9.7,<3.12"
python-dotenv = "^1.0.0"
pyyaml = "^6.0"
requests = "^2.31"
requests-toolbelt = "^1.0"
selenium = "4.18.1"
shapely = "2.0.1"
slack-sdk = "^3.21.3"
sqlalchemy = "^2.0"
streamlit = "^1.27.2"
streamlit-folium = "^0.15.0"
undetected-chromedriver = "3.4.6"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.0.3"
ruff = "^0.0.254"
tox = "^4.4.8"

[tool.ruff]
select = [
    "A",
    "ANN",
    "ARG",
    "B",
    "C",
    "COM",
    "C90",
    "E",
    "ERA",
    "F",
    "I",
    "N",
    "PGH",
    "PL",
    "PLE",
    "PLR",
    "PLW",
    "PT",
    "PTH",
    "Q",
    "RET",
    "RUF",
    "SLF",
    "SIM",
    "TID",
    "TRY",
    "UP",
    "W",
    "YTT",
]
ignore = ["A003", "ANN101", "ANN401", "N805", "N818", "PLR0913", "RET504", "RET505"]

fixable = [
    "A",
    "ANN",
    "ARG",
    "B",
    "C",
    "COM",
    "C90",
    "E",
    "ERA",
    "F",
    "I",
    "PGH",
    "PL",
    "PLE",
    "PLR",
    "PLW",
    "PT",
    "PTH",
    "Q",
    "RET",
    "RUF",
    "SLF",
    "SIM",
    "TID",
    "TRY",
    "UP",
    "W",
    "YTT",
]
unfixable = []

exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "venv",
    "pages",
    "tests"
]

line-length = 96

dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

target-version = "py310"

[tool.ruff.mccabe]
max-complexity = 10
