[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "bloom"
version = "0.1.0"
description = "Bloom scrapping application"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
alembic = "~1.13"
autopep8 = "~2.0"
dependency-injector = "~4.41"
dependency_injection = "~1.2"
folium = "~0.16"
GeoAlchemy2 = "~0.14"
geopandas = "~0.14"
geopy = "~2.4"
gql = "~3.5"
matplotlib = "~3.8"
openpyxl = "~3.1"
pandas = "~2.2"
poetry = "~1.8"
psycopg2-binary = "~2.9"
pydantic = "~2.6"
pydantic-settings = "~2.2"
python = ">=3.9,<3.9.7 || >3.9.7,<4.0"
python-dotenv = "~1.0"
PyYAML = "~6.0"
requests = "~2.31"
requests-toolbelt = "~1.0"
shapely = "~2.0"
slack-sdk = "~3.27"
SQLAlchemy = "~2.0"
streamlit = "~1.32"
streamlit-folium = "~0.18"


[tool.poetry.group.dev.dependencies]
pre-commit = "~3.6"
ruff = "~0.3"
tox = "~4.14"

[tool.ruff]
select = [
    "A",
    "ANN",
    "ARG",
    "B",
    "C",
    "COM",
    "C90",
    "E",
    "ERA",
    "F",
    "I",
    "N",
    "PGH",
    "PL",
    "PLE",
    "PLR",
    "PLW",
    "PT",
    "PTH",
    "Q",
    "RET",
    "RUF",
    "SLF",
    "SIM",
    "TID",
    "TRY",
    "UP",
    "W",
    "YTT",
]
ignore = [
    "A003",
    "ANN101",
    "ANN401",
    "N805",
    "N818",
    "PLR0913",
    "RET504",
    "RET505",
]

fixable = [
    "A",
    "ANN",
    "ARG",
    "B",
    "C",
    "COM",
    "C90",
    "E",
    "ERA",
    "F",
    "I",
    "PGH",
    "PL",
    "PLE",
    "PLR",
    "PLW",
    "PT",
    "PTH",
    "Q",
    "RET",
    "RUF",
    "SLF",
    "SIM",
    "TID",
    "TRY",
    "UP",
    "W",
    "YTT",
]
unfixable = []

exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "venv",
    "pages",
    "tests",
]

line-length = 96

dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

target-version = "py310"

[tool.ruff.mccabe]
max-complexity = 10
