[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "trawlwatch"
version = "1.0.0"
# dynamic = ["version"]
description = "A brief description of the project."
authors = [
    { name="Your Name", email="your.email@example.com" }
]
readme = "README.md"
# license = { file="LICENSE" }
requires-python = ">=3.8"
dependencies = [
]

# Doc
[tool.hatch.envs.doc]
dependencies = [
    "mkdocs",
    "mkdocstrings-python"
]

[tool.hatch.envs.doc.scripts]
serve = "mkdocs serve"
deploy = "mkdocs gh-deploy"