[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["bloom"]


[dependency-groups]
dev = [
    "pre-commit~=3.6",
    "ruff~=0.7",
    "tox~=4.14",
]

[project]
authors = [
    {name = "Your Name", email = "you@example.com"},
]
requires-python = "~=3.10"
dependencies = [
    "alembic~=1.13",
    "autopep8~=2.3",
    "dependency-injector~=4.42",
    "dependency-injection~=1.2",
    "GeoAlchemy2~=0.15",
    "geopandas~=0.14",
    "geopy~=2.4",
    "gql~=3.5",
    "matplotlib~=3.9",
    "openpyxl~=3.1",
    "pandas~=2.2",
    "poetry~=1.8",
    "psycopg2-binary~=2.9",
    "pydantic~=2.9",
    "pydantic-settings~=2.6",
    "python-dotenv~=1.0",
    "PyYAML~=6.0",
    "requests~=2.32",
    "requests-toolbelt~=1.0",
    "shapely~=2.0",
    "scipy==1.12.0",
    "slack-sdk~=3.33",
    "SQLAlchemy~=2.0",
    "pycountry==23.12.11",
    "fastapi[standard]>=0.115.0,<1.0.0",
    "uvicorn~=0.32",
    "redis~=5.0",
    "pytest>=8.3.3",
    "pytest-env>=1.1.5",
]
name = "bloom"
version = "0.1.0"
description = "Bloom scrapping application"


[tool.ruff]
select = [
    "A",
    "ANN",
    "ARG",
    "B",
    "C",
    "COM",
    "C90",
    "E",
    "ERA",
    "F",
    "I",
    "N",
    "PGH",
    "PL",
    "PLE",
    "PLR",
    "PLW",
    "PT",
    "PTH",
    "Q",
    "RET",
    "RUF",
    "SLF",
    "SIM",
    "TID",
    "TRY",
    "UP",
    "W",
    "YTT",
]
ignore = [
    "A003",
    "ANN101",
    "ANN401",
    "N805",
    "N818",
    "PLR0913",
    "RET504",
    "RET505",
]

fixable = [
    "A",
    "ANN",
    "ARG",
    "B",
    "C",
    "COM",
    "C90",
    "E",
    "ERA",
    "F",
    "I",
    "PGH",
    "PL",
    "PLE",
    "PLR",
    "PLW",
    "PT",
    "PTH",
    "Q",
    "RET",
    "RUF",
    "SLF",
    "SIM",
    "TID",
    "TRY",
    "UP",
    "W",
    "YTT",
]
unfixable = []

exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "venv",
    "pages",
    "tests",
]

line-length = 96

dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

target-version = "py310"

[tool.ruff.mccabe]
max-complexity = 10


[tool.pytest.ini_options]
env = [
    "POSTGRES_DRIVER=sqlite",
    "POSTGRES_USER=",
    "POSTGRES_PASSWORD=",
    "POSTGRES_HOSTNAME=",
    "POSTGRES_PORT=",
    "POSTGRES_DB=:memory:",
]

